[gd_scene load_steps=3 format=3 uid="uid://3fo3glgr3ppe"]

[ext_resource type="Script" path="res://UI/ReactLabel.gd" id="1_0ri1s"]
[ext_resource type="LabelSettings" uid="uid://r3dgxa3ry7n2" path="res://UI/fans_label.tres" id="2_k02mq"]

[node name="ReactLabel" type="HBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ri1s")

[node name="TextLabel" type="Label" parent="."]
layout_mode = 2
text = "粉丝数量"
label_settings = ExtResource("2_k02mq")

[node name="NumLabel" type="Label" parent="."]
layout_mode = 2
text = "XXXX"
label_settings = ExtResource("2_k02mq")
